public/assets/css/header.css
html {
  margin-top: 0;
  padding-top: 0;
}

body {
  margin-top: 0;
  padding-top: 0;
}

a {
  margin: 0;
  padding: 0;
  text-decoration: none;
}

li {
  list-style: none;
  cursor: pointer;
  box-sizing: border-box;
}
li a, li:hover, li:focus, li:visited {
  box-sizing: border-box;
  text-decoration: none;
  color: #000;
}

ul {
  margin: 0;
  padding: 0;
}

.img-responsive {
  max-width: 100%;
  height: auto;
}

.navbar-container {
  max-width: 1800px;
  margin: 0 auto;
  position: relative;
  z-index: 1;
}

.navbar-wrapper {
  margin: 0px 0px 10px 0px;
  padding: 5px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
  position: relative;
  background: #FFF;
  border-sizing: border-box;
}

.logo-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
  margin: 0px 0px 10px 10px;
}

.logo-container {
  max-width: 150px;
  -webkit-box-ordinal-group: 0;
  -webkit-order: -1;
      -ms-flex-order: -1;
          order: -1;
}

.primary-links {
  margin-bottom: 0px;
  position: absolute;
  width: 100%;
  top: -200px;
  -webkit-box-ordinal-group: 2;
  -webkit-order: 1;
      -ms-flex-order: 1;
          order: 1;
  z-index: -1;
  -webkit-transition: top 0.6s ease;
          transition: top 0.6s ease;
}
.primary-links.navbar-expanded {
  top: 100%;
}
.primary-links li {
  background: #f1f1f2;
  margin: 1px 0;
}

.secondary-links {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 5px;
  -webkit-box-ordinal-group: 1;
  -webkit-order: 0;
      -ms-flex-order: 0;
          order: 0;
}
.secondary-links li {
  width: 20%;
  text-align: center;
  margin-left: 1px;
}
.secondary-links li a, .secondary-links li a:hover {
  text-decoration: none;
}

.navbar li {
  padding: 10px;
}
.navbar li a {
  display: block;
}

.nav-dropdown .nav-dropdown-toggle {
  position: relative;
}
.nav-dropdown .toggle-anchor {
  text-decoration: none;
}
.nav-dropdown .toggle-anchor:after {
  content: " ^";
}
.nav-dropdown .nav-dropdown-menu {
  display: none;
}
.nav-dropdown .nav-dropdown-menu .image-nav {
  display: none;
}
.nav-dropdown .nav-dropdown-menu .extra-nav-title {
  font-size: 1em;
}
.nav-dropdown:focus + ul.nav-dropdown-menu, .nav-dropdown a:focus + ul.nav-dropdown-menu {
  display: block;
}
.nav-dropdown li {
  display: block;
  margin-top: 1px;
  padding: 1px 0px 0px 5px;
  border-top: 1px solid #FFF;
}
.nav-dropdown li a {
  display: block;
  margin: 0px;
  padding: 5px 0px;
}

.icon-grovemade-logo-type {
  box-sizing: border-box;
  /* Icon 4 */
}

.mobile-menu-icon {
  width: 20px;
  padding: 10px 0px;
  position: relative;
  text-align: center;
  margin: 0px auto;
  -webkit-transition: 0.5s ease-in-out;
          transition: 0.5s ease-in-out;
  -webkit-transform: rotate(0deg);
      -ms-transform: rotate(0deg);
          transform: rotate(0deg);
}
.mobile-menu-icon span {
  display: block;
  position: absolute;
  height: 2px;
  width: 100%;
  background: #000;
  border-radius: 1px;
  opacity: 1;
  -webkit-transform: rotate(0deg);
      -ms-transform: rotate(0deg);
          transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
          transition: 0.25s ease-in-out;
}
.mobile-menu-icon span:nth-child(1) {
  top: 3px;
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
      transform-origin: left center;
}
.mobile-menu-icon span:nth-child(2) {
  top: 9px;
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
      transform-origin: left center;
}
.mobile-menu-icon span:nth-child(3) {
  top: 15px;
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
      transform-origin: left center;
}
.mobile-menu-icon.open span:nth-child(1) {
  top: 2px;
  left: 3px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
      transform: rotate(45deg);
}
.mobile-menu-icon.open span:nth-child(2) {
  width: 0%;
  opacity: 0;
}
.mobile-menu-icon.open span:nth-child(3) {
  top: 15px;
  left: 3px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
      transform: rotate(-45deg);
}
/* ... */

